Updated pom maven files and Spring Boot config
Updated parent pom to include spring boot 2.2.12 maven dependency and
to set maven compiler to JDK 11 and project to Java version 11.

Updated service pom module to repackage Spring Boot application during
package stage and use dependency management from parent module to
avoid repeating version and scope for each dependency.

Updated Spring Boot configuration for datasources and Flyway database
migration.

Updated XSD configuration to use more annotation arguments to support
common toString, hash code, fluent builder etc.

Added lombok maven dependency to generate getters, setters and
builder pattern for POJO classes.

Updated Travis pipeline to use newer Docker Compose version and
to execute integration tests with maven command `mvn test
-Dtest=*IT` instead, surefire has an tendency to fail with Java 11.

Speed up the integration tests to use common containers for all
integration tests.

Updated copyright to 2020 for outdated project files.