@@ -16,121 +16,270 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>se.jsquad</groupId>
+    <artifactId>openbank-spring-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>${project.artifactId}</name>
+    <description>Openbank service parent</description>
+    <packaging>pom</packaging>
 
-	<groupId>se.jsquad</groupId>
-	<artifactId>openbank-spring-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>openbank-spring-parent</name>
-	<description>Demo project for Spring Boot</description>
-	<packaging>pom</packaging>
+    <modules>
+        <module>service</module>
+    </modules>
 
-	<modules>
-		<module>service</module>
-	</modules>
+    <properties>
+        <build.helper.maven.version>3.2.0</build.helper.maven.version>
+        <exec.maven.plugin.version>3.0.0</exec.maven.plugin.version>
+        <flywaydb.version>5.2.4</flywaydb.version>
+        <gson.version>2.8.5</gson.version>
+        <h2.version>1.4.199</h2.version>
+        <hibernate.ehcache.version>5.4.2.Final</hibernate.ehcache.version>
+        <hibernate.validator.version>6.0.17.Final</hibernate.validator.version>
+        <jakarta.activation.version>1.2.1</jakarta.activation.version>
+        <jasypt.spring.boot.starter.version>2.1.2</jasypt.spring.boot.starter.version>
+        <java.version>1.11</java.version>
+        <jdk.version>11</jdk.version>
+        <javax.inject.version>1</javax.inject.version>
+        <jaxb.version>2.3.3</jaxb.version>
+        <jaxb2.annotate.plugin.test.annox.annotations.version>1.0.0</jaxb2.annotate.plugin.test.annox.annotations.version>
+        <jaxb2.basics.annotate.version>1.1.0</jaxb2.basics.annotate.version>
+        <jaxb2.basics.version>1.11.1</jaxb2.basics.version>
+        <jaxb2.fluent.api.version>3.0</jaxb2.fluent.api.version>
+        <jaxb2.maven.plugin.version>2.5.0</jaxb2.maven.plugin.version>
+        <jaxws.ri.version>2.3.0</jaxws.ri.version>
+        <logcaptor.version>2.2.0</logcaptor.version>
+        <lombok.version>1.18.16</lombok.version>
+        <maven.antrun.plugin.version>1.8</maven.antrun.plugin.version>
+        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <maven.surefire.version>2.22.2</maven.surefire.version>
+        <micrometer.version>1.3.2</micrometer.version>
+        <mockserver.version>5.7.0</mockserver.version>
+        <mojo.jaxb2.version>2.5.0</mojo.jaxb2.version>
+        <mysql.connector.java.version>8.0.17</mysql.connector.java.version>
+        <okhttp3.version>4.2.2</okhttp3.version>
+        <rest.assured.version>4.0.0</rest.assured.version>
+        <spring.boot.version>2.2.12.RELEASE</spring.boot.version>
+        <springdoc.openapi.version>1.1.49</springdoc.openapi.version>
+        <testcontainers.junit.version>1.15.1</testcontainers.junit.version>
+        <urm.version>1.4.8</urm.version>
+        <versions.maven.plugin.version>2.7</versions.maven.plugin.version>
+    </properties>
 
-	<properties>
-        <build.helper.maven.version>3.0.0</build.helper.maven.version>
-		<exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>
-		<flywaydb.version>5.2.4</flywaydb.version>
-		<gson.version>2.8.5</gson.version>
-		<h2.version>1.4.199</h2.version>
-		<hibernate.ehcache.version>5.4.2.Final</hibernate.ehcache.version>
-		<hibernate.validator.version>6.0.17.Final</hibernate.validator.version>
-		<jakarta.activation.version>1.2.1</jakarta.activation.version>
-		<jasypt.spring.boot.starter.version>2.1.2</jasypt.spring.boot.starter.version>
-		<java.version>11</java.version>
-		<javax.inject.version>1</javax.inject.version>
-		<jaxb.xjc.version>2.3.2</jaxb.xjc.version>
-		<jaxb2.annotate.test.version>1.0.0</jaxb2.annotate.test.version>
-		<jaxb2.basics.annotate.version>1.0.2</jaxb2.basics.annotate.version>
-		<jaxb2.fluent.version>3.0</jaxb2.fluent.version>
-		<jaxws.ri.version>2.3.0</jaxws.ri.version>
-		<logcaptor.version>2.2.0</logcaptor.version>
-		<maven.antrun.plugin.version>1.8</maven.antrun.plugin.version>
-		<maven.surefire.version>2.22.2</maven.surefire.version>
-		<micrometer.version>1.3.2</micrometer.version>
-		<mockserver.version>5.7.0</mockserver.version>
-		<mojo.jaxb2.version>2.4</mojo.jaxb2.version>
-		<mysql.connector.java.version>8.0.17</mysql.connector.java.version>
-		<okhttp3.version>4.2.2</okhttp3.version>
-		<rest.assured.version>4.0.0</rest.assured.version>
-		<spring.version>5.2.6.RELEASE</spring.version>
-		<springdoc.openapi.version>1.1.49</springdoc.openapi.version>
-		<testcontainers.junit.version>1.12.5</testcontainers.junit.version>
-		<urm.version>1.4.8</urm.version>
-	</properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>com.iluwatar.urm</groupId>
-				<artifactId>urm-maven-plugin</artifactId>
-				<version>${urm.version}</version>
-				<configuration>
-					<outputDirectory>${project.basedir}/diagrams</outputDirectory>
-					<packages>
-						<param>se.jsquad</param>
-					</packages>
-					<includeMainDirectory>true</includeMainDirectory>
-					<includeTestDirectory>false</includeTestDirectory>
-					<presenter>graphviz</presenter>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>map</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+            <dependency>
+                <groupId>org.jvnet.jaxb2_commons</groupId>
+                <artifactId>jaxb2-basics-runtime</artifactId>
+                <version>${jaxb2.basics.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-registry-prometheus</artifactId>
+                <version>${micrometer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>${hibernate.validator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-ehcache</artifactId>
+                <version>${hibernate.ehcache.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-core</artifactId>
+                <version>${springdoc.openapi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.inject</groupId>
+                <artifactId>javax.inject</artifactId>
+                <version>${javax.inject.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-spring-boot-starter</artifactId>
+                <version>${jasypt.spring.boot.starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.connector.java.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-core</artifactId>
+                <version>${flywaydb.version}</version>
+            </dependency>
 
-	<profiles>
-		<profile>
-			<id>integrationtests</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<!-- Run integration tests (*IT) -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>${maven.surefire.version}</version>
-						<executions>
-							<execution>
-								<id>integration-test</id>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-						</configuration>
-					</plugin>
-					<!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
-					<plugin>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven.surefire.version}</version>
-						<configuration>
-							<skipTests>true</skipTests>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+            <!-- Test dependencies -->
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mock-server</groupId>
+                <artifactId>mockserver-client-java</artifactId>
+                <version>${mockserver.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${testcontainers.junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>${rest.assured.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>json-path</artifactId>
+                <version>${rest.assured.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>xml-path</artifactId>
+                <version>${rest.assured.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp3.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>mockwebserver</artifactId>
+                <version>${okhttp3.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.hakky54</groupId>
+                <artifactId>logcaptor</artifactId>
+                <version>${logcaptor.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>${versions.maven.plugin.version}</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
+                <configuration>
+                    <release>${jdk.version}</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.iluwatar.urm</groupId>
+                <artifactId>urm-maven-plugin</artifactId>
+                <version>${urm.version}</version>
+                <configuration>
+                    <outputDirectory>${project.basedir}/diagrams</outputDirectory>
+                    <packages>
+                        <param>se.jsquad</param>
+                    </packages>
+                    <includeMainDirectory>true</includeMainDirectory>
+                    <includeTestDirectory>false</includeTestDirectory>
+                    <presenter>graphviz</presenter>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>map</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>integrationtests</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- Run integration tests (*IT) -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+                        <executions>
+                            <execution>
+                                <id>integration-test</id>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <argLine>
+                                --illegal-access=permit
+                            </argLine>
+                            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                        </configuration>
+                    </plugin>
+                    <!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+                        <configuration>
+                            <argLine>
+                                --illegal-access=permit
+                            </argLine>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
